css/modules/header.css
.header {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 1.5rem 1rem;
    position: sticky;
    top:0;
    background-color: white;
    box-shadow: 0 0 15px 8px rgba(0, 0, 0, .10);
}
@media (min-width: 720px) {
    .header {
        padding: 1.5rem 3rem;
    }
}
@media (min-width: 920px) {
    .header {
        padding: 1.5rem 5rem;
    }
}
.logo {
    margin: 0;
}

.logo span {
    position: absolute;
    width: 1px;
    height: 1px;
    border: 0;
    clip: rect(0, 0, 0,0);
    margin: -1px;
    padding: 0;
    overflow: hidden;
}

.menu a {
    color: var(--brand);
}
.menu a:hover {
    color: var(--neutral-dark);
}
.menu ul {
    list-style-type: none;
    padding: 0;
    margin: 0;
    display: flex;
}
.menu ul li:not(:last-child) {
    margin-right: 1rem;
}

@media (min-width: 640px) {
    h1 {
        flex-grow: 1;
        text-align: center;
        padding-left: var(--width-menu);
    }
}

